--- a/smartBrain/package.json
+++ b/smartBrain/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-parallax-tilt": "^1.7.313",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.9.1"
+    "react-parallax-tilt": "^1.7.313"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
